--- a/activeseed/templates/base.html
+++ b/activeseed/templates/base.html
@@ -1,8 +1,22 @@
+{% load compress %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
     <meta charset="UTF-8">
     <title>Base template</title>
+
+    {% compress js %}
+        <script type="text/javascript" src="{% static "angular/angular.js" %}"></script>
+    {% endcompress %}
+
+    {% compress css %}
+        <style type="text/less">
+        body {
+            background-color: lighten(red, 10%);
+        }
+        </style>
+    {% endcompress %}
 </head>
 <body>
     <h1>Base template</h1>
