A few more changes

--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -1,4 +1,4 @@
-{% load compressed %}
+{% load pipeline %}
 {% load staticfiles %}
 <!DOCTYPE html>
 <html>
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>Base template</title>
 
-    {% stylesheet 'boostrap' %}
+    {% stylesheet 'bootstrap' %}
 </head>
 <body>
     <h1>Base template</h1>
