--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -4,13 +4,15 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Base template</title>
+    <title>{% block head_title %}Base template{% endblock head_title %}</title>
 
     {% stylesheet 'bootstrap' %}
 </head>
 <body>
-    <h1>Base template</h1>
-
-    <p>This is the base</p>
+    <div class="container">
+        {% block content %}
+        <h1>Base template</h1>
+        {% endblock content %}
+    </div>
 </body>
 </html>
