Django Allauth Bootstrapified a bit

--- a/project_name/apps/register/templates/account/signup_closed.html
+++ b/project_name/apps/register/templates/account/signup_closed.html
@@ -8,7 +8,9 @@
 {% block content %}
 <h1>{% trans "Sign Up Closed" %}</h1>
 
-<p>{% trans "We are sorry, but the sign up is currently closed." %}</p>
+<div class="alert alert-warning">
+    {% trans "We are sorry, but the sign up is currently closed." %}
+</div>
 {% endblock %}
 
 
