--- a/project_name/apps/register/templates/account/account_inactive.html
+++ b/project_name/apps/register/templates/account/account_inactive.html
@@ -7,5 +7,7 @@
 {% block content %}
 <h1>{% trans "Account Inactive" %}</h1>
 
-<p>{% trans "This account is inactive." %}</p>
+<div class="alert alert-warning">
+    {% trans "This account is inactive." %}
+</div>
 {% endblock %}
