--- a/project_name/apps/register/templates/account/signup.html
+++ b/project_name/apps/register/templates/account/signup.html
@@ -2,24 +2,23 @@
 
 {% load url from future %}
 {% load i18n %}
+{% load crispy_forms_tags %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block head_title %}{% trans "Sign up" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<h1>{% trans "Sign up" %}</h1>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p>
+  {% blocktrans %}
+  Already have an account? Then please <a href="{{ login_url }}">sign in</a>.
+  {% endblocktrans %}
+</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
+<form class="form-horizontal" id="signup_form" method="post" action="{% url 'account_signup' %}">
+  {% crispy form %}
   {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
 </form>
-
-
 {% endblock %}
-
-
