--- a/project_name/apps/register/templates/account/snippets/already_logged_in.html
+++ b/project_name/apps/register/templates/account/snippets/already_logged_in.html
@@ -2,4 +2,7 @@
 {% load account %}
 
 {% user_display user as user_display %}
-<p><strong>{% trans "Note" %}:</strong> {% blocktrans %}you are already logged in as {{ user_display }}.{% endblocktrans %}</p>
+<div class="alert alert-info">
+    <strong>{% trans "Note" %}{% trans ":" %}</strong>
+    {% blocktrans %}you are already logged in as {{ user_display }}.{% endblocktrans %}
+</div>
