--- a/project_name/templates/base.html
+++ b/project_name/templates/base.html
@@ -1,5 +1,6 @@
 {% load pipeline %}
 {% load staticfiles %}
+{% load metron_tags %}
 <!DOCTYPE html>
 <html>
 <head lang="en">
@@ -14,5 +15,7 @@
         <h1>Base template</h1>
         {% endblock content %}
     </div>
+
+    {% analytics %}
 </body>
 </html>
